--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -64,10 +64,10 @@ input[type=submit]:hover {
 
 .header-background {
 	background: url(../images/face3.jpg);
-	opacity:0;
-  animation: pop-in 2.0s ease-out forwards;
-  animation-delay: 2.0s;
-	border-radius: 50%;
+	/*opacity:0;
+    animation: pop-in 2.0s ease-out forwards;
+    animation-delay: 2.0s; */
+	
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 280px 20px;
@@ -89,7 +89,6 @@ input[type=submit]:hover {
 }
 .header {
 
-
 	@media #{$med} {
 
 		&__container{
@@ -101,12 +100,12 @@ input[type=submit]:hover {
 
       	}
 
-
 		&__title{display: none
 		}
 
 		&--sticky{
 		position:fixed;
+		z-index: 1;
 		top: 0;
 		left:0;
 		width:100%;
@@ -119,9 +118,9 @@ input[type=submit]:hover {
 				align-items: center;
 			}
 			&__title {display: block}
-		}
+			}
 
-	}
+		}
 
     }
 
@@ -189,11 +188,13 @@ opacity:0;
 }
 
 .portfolio{
+
 	margin: 0rem auto;
 
 }
 
 .portfolio-piece{
+	background-color: blue;
 
 	padding: 1rem;
 	width:100%;
@@ -252,6 +253,54 @@ opacity:0;
 	@media #{$med} {
 		&__article-title {max-width: 26rem}
 	}
+}
+
+gallery {
+    border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.responsive {
+
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .responsive {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table-row;
+    clear: both;
 }
 .contact {
 
